--- a/image-upload/index.html
+++ b/image-upload/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Bulk Image Upload</title>
-    <link rel="stylesheet" href="/admin/public/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -41,17 +41,17 @@
 
     <form id="upload-form" action="/upload" method="POST" enctype="multipart/form-data">
         <!-- Categories Section -->
-        <input type="checkbox" name="categories" value="bathroom" id="bathroom"> bathroom
-        <input type="checkbox" name="categories" value="bed" id="bed"> bed
-        <input type="checkbox" name="categories" value="chair" id="chair"> chair
-        <input type="checkbox" name="categories" value="cradle" id="cradle"> cradle
-        <input type="checkbox" name="categories" value="guestroom" id="guestroom"> guestroom
-        <input type="checkbox" name="categories" value="kitchen" id="kitchen"> kitchen
-        <input type="checkbox" name="categories" value="office" id="office"> office
-        <input type="checkbox" name="categories" value="table" id="table"> table
-        <input type="checkbox" name="categories" value="tvstand" id="tvstand"> tvstand
-        <input type="checkbox" name="categories" value="wardrobe" id="wardrobe"> wardrobe
-        <input type="checkbox" name="categories" value="wooden" id="wooden"> wooden
+        <input type="checkbox" name="categories" value="bathroom" id="bathroom"> Լոգարան
+        <input type="checkbox" name="categories" value="bed" id="bed"> Մահճակալ
+        <input type="checkbox" name="categories" value="chair" id="chair"> Աթոռ
+        <input type="checkbox" name="categories" value="cradle" id="cradle"> Օրորոց
+        <input type="checkbox" name="categories" value="guestroom" id="guestroom"> Հյուրասենյակ
+        <input type="checkbox" name="categories" value="kitchen" id="kitchen"> Խոհանոց
+        <input type="checkbox" name="categories" value="office" id="office"> Գրասենյակ
+        <input type="checkbox" name="categories" value="table" id="table"> Սեղան
+        <input type="checkbox" name="categories" value="tvstand" id="tvstand"> Հեռուստացույցի տակդիր
+        <input type="checkbox" name="categories" value="wardrobe" id="wardrobe"> Պահարան
+        <input type="checkbox" name="categories" value="wooden" id="wooden"> Փայտյա աքսեսուարներ
         <br><br>
 
         <div id="image-preview" class="preview-container"></div>
@@ -67,6 +67,6 @@
     </div>
 </div>
 
-<script src="/admin/public/scripts.js"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
