--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>HSH Furniture</title>
 
     <!--Meta Keywords and Description-->
-    <meta name="keywords" content="">
+    <meta name="keywords" content="furniture,create furniture,cradle,wooden accessories,bathroom furniture,bed,kitchen furniture">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 
@@ -123,7 +123,7 @@
                                 </a>
                             </li>
                             <li id="gallery-page-button">
-                                <a href="/gallery.html">Գալերիա
+                                <a href="https://galllery.hshfurnitures.com/gallery">Գալերիա
                                 </a>
                             </li>
                         </ul>
@@ -380,35 +380,47 @@
                 </div>
 
                 <div class="col-2-3" id="wooden-link-container">
-                    <a href="#" class="col-3 wooden-link">
+                    <a target="_blank" href="https://galllery.hshfurnitures.com/gallery#wardrobe" class="col-3 wooden-link">
                         <img src="images/company-images/wardrobe.png" alt="Wardrobe furniture" width="120" height="auto"/>
                         <div class="client-overlay"><span>Պահարան</span></div>
                     </a>
-                    <a href="#" class="col-3 wooden-link">
+                    <a target="_blank" href="https://galllery.hshfurnitures.com/gallery#bed" class="col-3 wooden-link">
                         <img src="images/company-images/bed.png" alt="Bed furniture" width="120" height="auto"/>
                         <div class="client-overlay"><span>Մահճակալ</span></div>
                     </a>
-                    <a href="#" class="col-3 wooden-link">
+                    <a target="_blank" href="https://galllery.hshfurnitures.com/gallery#kitchen" class="col-3 wooden-link">
                         <img src="images/company-images/cooking.png" alt="Kitchen furniture" width="120" height="auto"/>
                         <div class="client-overlay"><span>Խոհանոցային կահույք</span></div>
                     </a>
-                    <a href="#" class="col-3 wooden-link">
+                    <a target="_blank" href="https://galllery.hshfurnitures.com/gallery#table" class="col-3 wooden-link">
                         <img src="images/company-images/desk.png" alt="Table furniture" width="120" height="auto"/>
                         <div class="client-overlay"><span>Սեղան</span></div>
                     </a>
-                    <a href="#" class="col-3 wooden-link">
+                    <a target="_blank" href="https://galllery.hshfurnitures.com/gallery#chair" class="col-3 wooden-link">
                         <img src="images/company-images/chair.png" alt="Chair furniture" width="120" height="auto"/>
                         <div class="client-overlay"><span>Աթոռ</span></div>
                     </a>
-                    <a href="#" class="col-3 wooden-link">
+                    <a target="_blank" href="https://galllery.hshfurnitures.com/gallery#bathroom" class="col-3 wooden-link">
                         <img src="images/company-images/sink.png" alt="Bathroom furniture" width="120" height="auto"/>
                         <div class="client-overlay"><span>Լոգարանի կահույք</span></div>
                     </a>
-                    <a href="#" class="col-3 wooden-link">
+                    <a target="_blank" href="https://galllery.hshfurnitures.com/gallery#tvstand" class="col-3 wooden-link">
                         <img src="images/company-images/tv-stand.png" alt="Tv stand" width="120" height="auto"/>
                         <div class="client-overlay"><span>Հեռուստացույցի տակդիր</span></div>
                     </a>
-                    <a href="#" class="col-3 wooden-link">
+                    <a target="_blank" href="https://galllery.hshfurnitures.com/gallery#guestroom" class="col-3 wooden-link">
+                        <img src="images/company-images/guestroom.png" alt="Guest room furniture" width="120" height="auto"/>
+                        <div class="client-overlay"><span>Հյուրասենյակի կահույք</span></div>
+                    </a>
+                    <a target="_blank" href="https://galllery.hshfurnitures.com/gallery#cradle" class="col-3 wooden-link">
+                        <img src="images/company-images/cradle.png" alt="Cradle" width="120" height="auto"/>
+                        <div class="client-overlay"><span>Օրորոց</span></div>
+                    </a>
+                    <a target="_blank" href="https://galllery.hshfurnitures.com/gallery#office" class="col-3 wooden-link">
+                        <img src="images/company-images/office.png" alt="Office Furniture" width="120" height="auto"/>
+                        <div class="client-overlay"><span>Գրասենյակի կահույք</span></div>
+                    </a>
+                    <a target="_blank" href="https://galllery.hshfurnitures.com/gallery#wooden" class="col-3 wooden-link">
                         <img src="images/company-images/house.png" alt="Wooden accessories" width="120" height="auto"/>
                         <div class="client-overlay"><span>Փայտյա աքսեսուարներ</span></div>
                     </a>
@@ -446,7 +458,7 @@
                                 <a href="tel:+37477803778">+374(77)-803-778</a>
 
                                 <span>Էլ. հասցե</span>
-                                <a href="mailto:hovhannisya@gmail.com">someone@example.com</a>
+                                <a href="mailto:contact@hshfurnitures.com">contact@hshfurnitures.com</a>
                             </div>
                             <div id="map" style="width:600px;height:400px;"></div>
                         </div>
@@ -508,7 +520,7 @@
     <footer id="landing-footer" class="clearfix">
         <div class="row clearfix">
 
-            <p id="copyright" class="col-2">Made with love by happy customers</p>
+            <p id="copyright" class="col-2">Made with love</p>
 
             <!--Social Icons in Footer-->
             <ul class="col-2 social-icons">
